fix /superAdmin/userManagement, add page for /reportViewer/lossIncomeStatement and /reportViewer/financialPosition
